add functionality for main display & overlay (WIP)

--- a/html/views/overlay/admin/index.html
+++ b/html/views/overlay/admin/index.html
@@ -42,8 +42,8 @@
 				<h2>Lower Third</h2>
 				<div class="in">
 					<label>Line 1/Line 2/Style</label>
-					<input data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.LowerThird.Line1)" type="text"/><br/>
-					<input data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.LowerThird.Line2)" type="text"/><br/>
+					<input sbControl="ScoreBoard.Settings.Setting(Overlay.Interactive.LowerThird.Line1)" type="text"/><br/>
+					<input sbControl="ScoreBoard.Settings.Setting(Overlay.Interactive.LowerThird.Line2)" type="text"/><br/>
 					<select class="SelectUpdator" id="LowerThirdStyle" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.LowerThird.Style)" data-target="#LowerStyle">
 						<option value="ColourDefault">--- Default --- </option>
 						<option value="ColourTeam1">Team 1</option>
