--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -7,52 +7,54 @@
     <script type="text/javascript" src="/json/WS.js"></script>
     <script type="text/javascript" src="/views/common.js"></script>
   </head>
-  <body>
+  <body sbPrefix="& = ScoreBoard.Settings.Setting(ScoreBoard.View_">
     <div class="ConnectionError">Not connected</div>
-    <div class="DisplayPane" id="image"><img class="object" /></div>
-    <div class="DisplayPane" id="video"><video class="object" onended="this.play();"></video></div>
-    <div class="DisplayPane" id="html"><iframe class="object"></iframe></div>
+    <div class="DisplayPane" id="image"><img class="object" sbAttr="src: &Image)" sbCss="object-fit: &ImageScaling)" /></div>
+    <div class="DisplayPane" id="video">
+      <video class="object" onended="this.play();" sbAttr="src: &Video)" sbCss="object-fit: &VideoScaling)"></video>
+    </div>
+    <div class="DisplayPane" id="html"><iframe class="object" sbAttr="src: &CustomHtml)"></iframe></div>
     <div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/?"></iframe></div>
     <div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard.CurrentGame" class="JamScore">
-      <div class="Team Team1 Left" sbContext="Team(1)">
-        <div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
-        <div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
-        <div class="Score Box AutoFit" sbDisplay="Score"></div>
-        <div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
-        <div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
-        <div class="DotTimeouts Box">
-          <div class="Dot Timeout1"></div>
-          <div class="Dot Timeout2"></div>
-          <div class="Dot Timeout3"></div>
-        </div>
-        <div class="DotOfficialReviews Box">
-          <div class="Dot OfficialReview1"></div>
-        </div>
+      <div
+        class="Team"
+        sbForeach="Team"
+        sbToggleClass="HasName: AlternateName(scoreboard),Name: notEmpty | HasLogo: Logo: notEmpty | HideLogos: &HideLogos)"
+      >
         <div
-          class="ShowInJam Clock Lead AutoFit"
-          sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam"
-          sbModify="jammer"
+          class="Name AutoFit"
+          sbDisplay="AlternateName(scoreboard),Name"
+          sbAutoFitOn="Logo, &HideLogos)"
+          sbCss="color: Color(scoreboard_fg) | background-color: Color(scoreboard_bg) | text-shadow: Color(scoreboard_glow): toShadow"
         ></div>
-      </div>
-
-      <div class="Team Team2 Right" sbContext="Team(2)">
-        <div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
-        <div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
+        <div class="Logo" sbCss="background-image: Logo: toCssUrl">&nbsp;</div>
         <div class="Score Box AutoFit" sbDisplay="Score"></div>
-        <div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
-        <div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
-        <div class="DotTimeouts Box">
-          <div class="Dot Timeout1"></div>
-          <div class="Dot Timeout2"></div>
-          <div class="Dot Timeout3"></div>
+        <div
+          class="JamScore Box AutoFit"
+          sbDisplay="JamScore"
+          sbToggleClass="NoInitial: NoInitial | Overtime: /ScoreBoard.CurrentGame.InOvertime"
+        ></div>
+        <div class="ShowInJam Clock StarPass AutoFit" sbDisplay="StarPass: toSP"></div>
+        <div class="DotTimeouts Box" sbCss="background: Color(scoreboard_dots_bg)">
+          <div class="Dot Timeout1" sbToggleClass="Used: Timeouts: <1" sbCss="background: Color(scoreboard_dots_fg)"></div>
+          <div class="Dot Timeout2" sbToggleClass="Used: Timeouts: <2" sbCss="background: Color(scoreboard_dots_fg)"></div>
+          <div class="Dot Timeout3" sbToggleClass="Used: Timeouts: <3" sbCss="background: Color(scoreboard_dots_fg)"></div>
         </div>
-        <div class="DotOfficialReviews Box">
-          <div class="Dot OfficialReview1"></div>
+        <div class="DotOfficialReviews Box" sbCss="background: Color(scoreboard_dots_bg)">
+          <div
+            class="Dot OfficialReview1"
+            sbToggleClass="Retained: RetainedOfficialReview | Used: OfficialReviews: <1"
+            sbCss="background: Color(scoreboard_dots_fg)"
+          ></div>
+          <div
+            class="Dot OfficialReviewHelper"
+            sbToggleClass="Retained: RetainedOfficialReview | Used: OfficialReviews: <1"
+            sbCss="background: Color(scoreboard_dots_fg)"
+          ></div>
         </div>
         <div
           class="ShowInJam Clock Lead AutoFit"
-          sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam"
-          sbModify="jammer"
+          sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam: toJammerName"
         ></div>
       </div>
 
@@ -62,44 +64,45 @@
           <span class="Name" sbDisplay="Name"></span>
           <span class="Number" sbDisplay="Number"></span>
         </div>
-        <div class="Box Time FlatTop AutoFit" sbDisplay="Time" sbModify="toTime"></div>
+        <div class="Box Time FlatTop AutoFit" sbDisplay="Time, Direction: toTime"></div>
       </div>
       <div class="ShowInJam Clock Jam Large" sbContext="Clock(Jam)">
         <div class="Box Name FlatDark FlatBottom AutoFit">
           <span class="Name" sbDisplay="Name"></span>
           <span class="Number" sbDisplay="Number"></span>
         </div>
-        <div class="Box Time FlatTop AutoFit" sbDisplay="Time" sbModify="toTime"></div>
+        <div class="Box Time FlatTop AutoFit" sbDisplay="Time, Direction: toTime"></div>
       </div>
 
       <!-- Lineup / Timeout Clocks Running -->
       <div
         class="ShowInLineup ShowInTimeout Clock Period Small Time Box AutoFit"
         sbContext="Clock(Period)"
-        sbDisplay="Time"
-        sbModify="toTime"
+        sbDisplay="Time, Direction: toTime"
       ></div>
       <div class="ShowInNoClock Clock Period Small Time Box AutoFit"></div>
       <div
         class="ShowInLineup ShowInTimeout ShowInNoClock Clock Period Small NameNumber Box AutoFit"
-        sbContext="Clock(Period)"
-        sbDisplay="Name,Number"
-        sbModify="toClockInitialNumber"
+        sbDisplay="Clock(Period).Name,Clock(Period).Number,Rule(Period.Number): toClockInitialNumber"
       ></div>
       <div
         class="ShowInLineup ShowInTimeout Clock Jam Small NameNumber Box AutoFit"
         sbContext="Clock(Jam)"
-        sbDisplay="Name,Number"
-        sbModify="toClockInitialNumber"
+        sbDisplay="Name,Number: toClockInitialNumber"
+      ></div>
+      <div class="ShowInLineup Clock Description Small Box AutoFit">Lineup</div>
+      <div class="ShowInTimeout Clock Description Small Box Red AutoFit" sbDisplay="TimeoutOwner, OfficialReview: toTimeoutType"></div>
+      <div
+        class="ShowInLineup Clock Lineup Small Box AutoFit"
+        sbDisplay="Clock(Lineup).Time, Clock(Lineup).Direction: toTime"
+        sbToggleClass="Red: NoMoreJam"
       ></div>
       <div
-        class="ShowInLineup ShowInTimeout Clock Description Small Box AutoFit"
-        sbDisplay="Clock(Lineup).Name, Clock(Lineup).Running, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReview, Team(1).Timeouts, Team(1).OfficialReviews, Team(1).RetainedOfficialReview, Team(2).Timeouts, Team(2).OfficialReviews, Team(2).RetainedOfficialReview"
-        sbModify="smallDescriptionUpdate"
+        class="ShowInTimeout Clock Timeout Small Box AutoFit"
+        sbDisplay="Clock(Timeout).Time, Clock(Timeout).Direction: toTime"
+        sbToggleClass="Red: NoMoreJam"
       ></div>
-      <div class="ShowInLineup Clock Lineup Small Box AutoFit" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
-      <div class="ShowInTimeout Clock Timeout Small Box AutoFit" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
-      <div class="ShowInNoClock Clock None Small Box AutoFit" sbContext="Clock(Jam)" sbDisplay="Name" sbModify="toComingUp"></div>
+      <div class="ShowInNoClock Clock None Small Box AutoFit">Coming Up</div>
 
       <!-- Sponsor Banners -->
       <div class="ShowInTimeout ShowInLineup ShowInNoClock Clock" id="SponsorBox">
@@ -118,10 +121,10 @@
       <div class="ShowInIntermission Clock Intermission">
         <div
           class="Message Box AutoFit"
-          sbDisplay="/ScoreBoard.Settings.Setting(ScoreBoard.Intermission.PreGame), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Intermission), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Unofficial), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Official), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.OfficialWithClock), OfficialScore, ClockDuringFinalScore, Clock(Intermission).Number, Rule(Period.Number)"
-          sbModify="intermissionDisplay"
+          sbPrefix="# = ScoreBoard.Settings.Setting(ScoreBoard.Intermission."
+          sbDisplay="#PreGame), #Intermission), #Unofficial), #Official), #OfficialWithClock), OfficialScore, ClockDuringFinalScore, Clock(Intermission).Number, Rule(Period.Number): intermissionDisplay"
         ></div>
-        <div class="Time Box AutoFit" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
+        <div class="Time Box AutoFit" sbContext="Clock(Intermission)" sbDisplay="Time, Direction: toTime"></div>
       </div>
     </div>
   </body>
