--- a/html/nso/sbo/index.css
+++ b/html/nso/sbo/index.css
@@ -10,3 +10,4 @@ body { margin: 0px; }
 table.RowTable { border-spacing: 0px; } 
 #capsLockWarning { padding: .5em 1em; color: white; } 
 #capsLockWarning.Hidden { display: none; } 
+#tabsDiv>#TeamsTab { overflow-x: auto; }
