--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -74,7 +74,7 @@
         <div class="Box Time FlatTop AutoFit" sbDisplay="Time, Direction: toTime"></div>
       </div>
 
-      <!-- Lineup / Timeout Clocks Running -->
+      <!-- Lineup / Timeout / No Clocks Running -->
       <div
         class="ShowInLineup ShowInTimeout Clock Period Small Time Box AutoFit"
         sbContext="Clock(Period)"
